--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ngx-pwa/local-storage": "^6.2.3",
+    "@types/googlemaps": "^3.30.19",
     "core-js": "^2.5.4",
     "moment": "^2.24.0",
     "ng5-slider": "^1.1.13",
