--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/material": "^7.3.5",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "@ngx-pwa/local-storage": "^6.2.3",
     "@types/googlemaps": "^3.30.19",
     "core-js": "^2.5.4",
