--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "postbuild": "node skip-dropbox-api.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -29,6 +30,7 @@
     "moment": "^2.24.0",
     "ng5-slider": "^1.1.13",
     "ngx-lightbox": "^1.2.0",
+    "replace-in-file": "^3.4.4",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
