--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "ngforage": "^4.0.3",
     "ngx-lightbox": "^1.2.0",
     "replace-in-file": "^3.4.4",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.3.3",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
