--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-pwa/local-storage": "^6.2.3",
     "@types/googlemaps": "^3.30.19",
     "core-js": "^2.5.4",
+    "d3": "^5.9.2",
     "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "ng5-slider": "^1.1.13",
@@ -44,9 +45,10 @@
     "@angular/cli": "~7.3.6",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/d3": "^5.7.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
