--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "core-js": "^2.5.4",
     "d3": "^5.9.2",
     "localforage": "^1.7.3",
+    "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
     "ng5-slider": "^1.1.13",
     "ngforage": "^4.0.3",
     "ngx-lightbox": "^1.2.0",
+    "ngx-mapbox-gl": "^3.1.0",
     "replace-in-file": "^3.4.4",
     "rxjs": "6.3.3",
     "rxjs-compat": "6.3.3",
@@ -48,6 +50,7 @@
     "@types/d3": "^5.7.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mapbox-gl": "^0.51.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
